homepage and navbar edits

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,3 +12,11 @@
   width: 80px;
 }
 
+.index-wrap.search-bar-main {
+  border-radius: 25px;
+  padding: 3px 10px;
+}
+
+button#dropdownMenuButton.user-icon {
+  border-radius: 10px;
+}
