--- a/app/views/bookings/dashboard.html.erb
+++ b/app/views/bookings/dashboard.html.erb
@@ -1,42 +1,5 @@
-<div class="dashboard-home">
-
-  <div class="dashboard-header d-flex justify-content-between">
-
-    <div class="logo-box">
-      <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag "logo.png", :class => "dashboard-style-logo", :id => "sidebar" %>
-      <% end %>
-    </div>
-
-      <div class="dashboard-search-bar">
-        <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
-          <div class="search-form-control form-group">
-            <input class="form-control string required" type="text" name="search[query]" placeholder="Search for watches" id="search_query" />
-              <%= link_to watches_path, class: "btn btn-flat" do %>
-                <i class="fas fa-search"></i>
-              <% end %>
-            </button>
-          </div>
-        </form>
-      </div>
-      <div class="items-menu-bar d-flex align-items-center">
-          <%= link_to root_path do %>
-            <i class="fas fa-home fa-2x"></i>
-          <% end %>
-          <div class="dropdown dashboard-home">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Payment Info</a>
-              <a class="dropdown-item" href="#">Account Setting</a>
-              <%= link_to destroy_user_session_path, method: :delete, class: "dropdown-item" do %>
-                <i class="fas fa-sign-out-alt"></i>
-              <% end %>
-            </div>
-          </div>
-      </div>
-  </div>
+<%= render 'shared/navbar_searchbar' %>
+<%= yield %>
 
   <div class="dashboard-body d-flex">
 
