--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -142,7 +142,7 @@ a#profile-tab:hover {
   margin-bottom: 10px;
 }
 
-.fa-envelope:hover {
+.lender-info-card .fa-envelope:hover {
   color: #79C3BD;
 
 }
@@ -251,4 +251,8 @@ p.lender-info {
 
 .booked-card-info h4 {
   color: black;
+}
+
+.nav-item:hover{
+
 }
