--- a/app/views/bookings/dashboard.html.erb
+++ b/app/views/bookings/dashboard.html.erb
@@ -1,6 +1,6 @@
 <div class="dashboard-home">
 
-  <div class="dashboard-header d-flex justify-content-between">
+  <div class="dashboard-header d-flex justify-content-between align-items-center">
 
     <div class="logo-box">
       <%= link_to root_path, class: "navbar-brand" do %>
@@ -8,17 +8,13 @@
       <% end %>
     </div>
 
-      <div class="dashboard-search-bar">
-        <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
-          <div class="search-form-control form-group">
-            <input class="form-control string required" type="text" name="search[query]" placeholder="Search for watches" id="search_query" />
-              <%= link_to watches_path, class: "btn btn-flat" do %>
-                <i class="fas fa-search"></i>
-              <% end %>
-            </button>
-          </div>
-        </form>
-      </div>
+    <%= form_tag watches_path, method: :get do %>
+      <div class = "index-wrap">
+    <%= text_field_tag :query,params[:query],class: "form-control",placeholder: "Find a watch"%>
+      <i class="fas fa-stopwatch mr-2"> </i>
+    </div>
+    <% end %>
+
       <div class="items-menu-bar d-flex align-items-center">
           <%= link_to root_path do %>
             <i class="fas fa-home fa-2x"></i>
@@ -53,6 +49,9 @@
         </li>
         <li class="nav-item" role="presentation">
           <a class="nav-link" id="menu1" data-toggle="tab" href="#menu1" role="tab" aria-controls="profile" aria-selected="false"><i class="fas fa-heart"></i></a>
+        </li>
+        <li class="nav-item" role="presentation">
+          <a class="nav-link" id="menu1" data-toggle="tab" href="#menu2" role="tab" aria-controls="profile" aria-selected="false"><i class="fas fa-envelope top"></i></a>
         </li>
       </ul>
       <div class="tab-content" id="myTabContent">
@@ -156,9 +155,13 @@
       </div>
 
         <div id="menu1" class="tab-pane fade">
-          <h3>Menu 1</h3>
-          <p>Some content in menu 1.</p>
+          <h3>My likes</h3>
         </div>
+
+        <div id="menu2" class="tab-pane fade">
+        </div>
+
+
       </div>
     </div>
 
