--- a/app/views/watches/index.html.erb
+++ b/app/views/watches/index.html.erb
@@ -3,7 +3,16 @@
   <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag "logo.png", :class => "style-logo" %>
     <% end %>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
+    <%= form_tag watches_path, method: :get do %>
+      <div class = "index-wrap">
+    <%= text_field_tag :query,params[:query],class: "form-control",placeholder: "Find a watch"%>
+      <i class="fas fa-stopwatch mr-2"> </i>
+    </div>
+    <% end %>
+
+      <div class="dropdown dashboard-home">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -32,30 +41,6 @@
         </li>
       <% end %>
     </div>
-
-      <div class="dashboard-search-bar">
-        <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
-          <div class="search-form-control form-group">
-            <input class="form-control string required" type="text" name="search[query]" placeholder="Search for watches" id="search_query" />
-              <%= link_to watches_path, class: "btn btn-flat" do %>
-                <i class="fas fa-search"></i>
-              <% end %>
-            </button>
-          </div>
-        </form>
-      </div>
-
-      <div class="dropdown dashboard-home">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#">Payment Info</a>
-          <a class="dropdown-item" href="#">Account Setting</a>
-          <%= link_to destroy_user_session_path, method: :delete, class: "dropdown-item" do %>
-            <i class="fas fa-sign-out-alt"></i>
-          <% end %>
-        </div>
       </div>
   </div>
 
