--- a/app/views/watches/show.html.erb
+++ b/app/views/watches/show.html.erb
@@ -1,6 +1,6 @@
   <div class="show-watch-body">
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon navbar-dark bg-dark">
-  <%= link_to "#", class: "navbar-brand" do %>
+  <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag "logo.png", :class => "style-logo" %>
     <% end %>
 
