login button change

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -113,6 +113,11 @@ a#home-tab.active {
   color: white;
 }
 
+.nav-link {
+  background-color: none;
+  color: white;
+}
+
 a#profile-tab.active {
   background-color: #232323;
   color: white;
