--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -71,8 +71,8 @@
 
 
               <%= simple_form_for [@watch, @booking] do |f| %>
-              <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
-              <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
+              <%= f.input :start_date, as: :string, required: true, input_html: {class: "datepicker"} %>
+              <%= f.input :end_date, as: :string, required: true, input_html: {class: "datepicker"} %>
               <%= f.button :submit, "Book now", class: "date-button" %>
               <% end %>
             </div>
