--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,20 +1,72 @@
 footer{
   width: 100%;
+  position: relative;
+  height: 200px;
 }
 
-.flex-center > a {
-  color: white;
+.socials {
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  margin:0;
+  padding:0;
+  display:flex;
 }
 
-.flex-center > a:hover {
-  color: #FFD700;
+.socials li {
+  list-style: none;
 }
 
-.footer-copyright > a {
-  text-decoration: none;
-  color: white;
+.socials li a {
+  position: relative;
+  width:60px;
+  height:60px;
+  display:block;
+  text-align:center;
+  margin:0 10px;
+  border-radius: 50%;
+  padding: 6px;
+  box-sizing: border-box;
+  text-decoration:none;
+  box-shadow: 0 10px 15px rgba(0,0,0,0.3);
+  background: linear-gradient(0deg, #ddd, #fff);
+  transition: .5s;
 }
 
-.footer-copyright > a:hover {
-  color: #FFD700;
+.socials li a:hover {
+  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+  text-decoration:none;
+}
+
+.socials li a .fab {
+  width: 100%;
+  height:100%;
+  display:block;
+  background: linear-gradient(0deg, #fff, #ddd);
+  border-radius: 50%;
+  line-height: calc(60px - 12px);
+  font-size:24px;
+  color: #262626;
+  transition: .5s;
+}
+
+.socials li:nth-child(1) a:hover .fab {
+  color: #3b5998;
+}
+
+.socials li:nth-child(2) a:hover .fab {
+  color: #00aced;
+}
+
+.socials li:nth-child(3) a:hover .fab {
+  color: #dd4b39;
+}
+
+.socials li:nth-child(4) a:hover .fab {
+  color: #007bb6;
+}
+
+.socials li:nth-child(5) a:hover .fab {
+  color: #e4405f;
 }
