--- a/app/views/watches/edit.html.erb
+++ b/app/views/watches/edit.html.erb
@@ -17,17 +17,18 @@
   <% end %>
 
   <div class="my-watch-card d-flex">
+
+    <%= cl_image_tag(@watch.photos.last.key, :alt => "rss feed", class: "my-watch-image" ) %>
+      <a data-toggle="collapse" href="#imageEdit" role="button" aria-expanded="false" aria-controls="collapseExample">
+          <i class="fas fa-edit"></i>
+      </a>
     <div class='my-watch-info-edit'>
       <%= simple_form_for @watch do |f| %>
 
       <div class = "edit-watch-details">
-        <% @watch.photos.each do |photo| %>
-          <div class="my-watch-image"style="url(<%= cl_image_path(photo.key) %>)"></div>
-          <p>Images</p>
-          <a data-toggle="collapse" href="#imageEdit" role="button" aria-expanded="false" aria-controls="collapseExample">
-            <i class="fas fa-edit"></i>
-          </a>
-        <% end %>
+        <%# @watch.photos.each do |photo| %>
+
+        <%# end %>
       </div>
 
       <div class="collapse editBlock" id="imageEdit">
