--- a/app/assets/stylesheets/components/_newwatch.scss
+++ b/app/assets/stylesheets/components/_newwatch.scss
@@ -101,4 +101,6 @@ margin-right: 140px;
   margin-bottom: 60px;
   background-color: white;
   border-radius: 10px;
+    border-left: solid 30px;
+    border-color: #A1CDC9;
 }
