--- a/app/views/watches/_card.html.erb
+++ b/app/views/watches/_card.html.erb
@@ -8,6 +8,7 @@
     <div class="card-body-index">
       <h4 class="card-index-title"><strong><%= watch.brand %></strong></h4>
       <h5 class="card-index-description"><%= watch.description %></h5>
+      <p class="card-index-material"><strong><%= watch.material.name %></strong></p>
     </div>
     <div class="card-index-booking d-flex justify-content-between">
       <div>
