--- a/app/views/shared/_navbar_searchbar.html.erb
+++ b/app/views/shared/_navbar_searchbar.html.erb
@@ -5,7 +5,7 @@
 
   <%= form_tag watches_path, method: :get do %>
     <div class = "index-wrap search-bar-main">
-    <%= text_field_tag :query,params[:query],class: "form-control search-bar-main",placeholder: "Let's find your watch"%>
+    <%= text_field_tag :query,params[:query],class: "form-control search-bar-main",placeholder: "#{params[:query]}"%>
     <i class="fas fa-stopwatch mr-2" style="color: #B0ACAD;"> </i>
   </div>
   <% end %>
