--- a/app/views/watches/index.html.erb
+++ b/app/views/watches/index.html.erb
@@ -1,13 +1,23 @@
 <%= render 'shared/navbar_searchbar' %>
 <%= yield %>
->>>>>>> master
 
 <div class="index-page">
 
   <div id="map-container">
     <div class="watch-card-display col-8">
-      <div class="page-header">
-        <h1>Our <strong>watches</strong></h1>
+      <div class="page-header d-flexr">
+
+        <h3>Find your perfect watch</h3>
+
+        <%= form_tag watches_path, method: :get do |f|%>
+          <%= hidden_field_tag :query,
+            params[:query]
+          %>
+            <%= select_tag "price", options_for_select([200,500,1000,2000,4000,6000],params[:price]), {prompt: "Select a price"}%>
+            <%= select_tag "material", options_for_select(Material.all.pluck(:name), params[:material]), {prompt: "Select a material"}%>
+          <%= submit_tag "Search", class: "btn btn-primary btn-refine" %>
+        <% end %>
+
       </div>
       <div class="cards-index-container">
         <% @watches.each do |watch| %>
