--- a/app/assets/stylesheets/components/_newwatch.scss
+++ b/app/assets/stylesheets/components/_newwatch.scss
@@ -104,3 +104,16 @@ margin-right: 140px;
     border-left: solid 30px;
     border-color: #A1CDC9;
 }
+
+.my-watch-image-new{
+  margin-right: 40px;
+  margin-top: 20px;
+  display: inline-block;
+    border-radius: 5px;
+    width:75% !important;
+    height:80% !important;
+    max-width: 300px !important;
+    max-height: 300px!important;
+    margin-left:16px;
+    margin-right:20px;
+}
