--- a/app/views/watches/show.html.erb
+++ b/app/views/watches/show.html.erb
@@ -39,7 +39,7 @@
 </div>
 <div id="map-container" style="width:100%; padding-top: 45px; padding-left: 40px; margin-right: 0">
 
-  <div class="show-card-watches d-flex" style="margin-right: 10px">
+  <div class="show-card-watches d-flex" style="margin-right: 10px, max-width: 400px">
 
     <div class="card-image-index col-4" style="background-image: url(<%= cl_image_path(@watch.photos.first.key) %>); background-position: center;">
     </div>
