--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -28,6 +28,7 @@ a:hover {
   width: 15%;
   min-width: 150px;
   background-image: image-url('background-01.jpg');
+  filter: blur(1.5px);
   height: 100vh;
   background-size: cover;
   position: sticky;
@@ -113,9 +114,18 @@ a#home-tab.active {
   color: white;
 }
 
+a#menu1.active {
+  background-color: #232323;
+  color: white;
+}
+
+a#menu1:hover{
+  color: #B8B8B8;
+}
+
 .nav-link {
   background-color: none;
-  color: white;
+  color: #495058;
 }
 
 a#profile-tab.active {
@@ -264,4 +274,60 @@ p.lender-info {
 
 .nav-item:hover{
 
+}
+
+.add .fa-plus {
+  padding-right: 10px;
+}
+
+.add {
+  background-color: white;
+  width: 200px;
+  padding-left: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0px 4px 4px 4px rgab(137,142,147,0.7);
+  border-radius: 15px;
+}
+
+.add:hover {
+  background-color:#79C3BD;
+  color: white;
+}
+
+.add-text{
+  padding-top: 10%;
+}
+
+.my-watch-booking {
+  background-color: #F4F4F4;
+  border-radius: 15px;
+  border: 1px solid white;
+  margin-bottom: 5px;
+  padding-bottom: 20px;
+}
+
+.my-watch-booking-renter{
+  background-color: #79C3BD;
+  color: white;
+  width: 100%;
+  padding-top: 20px;
+  padding-left: 30px;
+  padding-bottom: 10px;
+}
+
+.my-watch-booking-info {
+  padding-left: 30px;
+  padding-top: 10px;
+}
+
+.btn-my-bookings{
+  background-color:#79C3BD;
+  color: black;
+  border:none;
+  border-radius: 10px 10px 0px 0px;
+}
+
+.btn-my-bookings:hover {
+  background-color:#3E3E3E;
+  color: white;
 }
