--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <%= render 'shared/navbar' unless disable_navbar = true %>
+    <%= render 'shared/navbar' unless disable_navbar == true %>
     <%= render 'shared/flashes' %>
     <%= yield %>
   </body>
